--- a/palm.html
+++ b/palm.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="overlay">
-      <img id = "img" src="./assets/FIRE.png" >
+      <img id = "img" src="" >
     </div>
     <div class="videoDiv">
       <video class="video" autoplay></video>
